objects/Geography__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Updated_Date__c</fullName>
        <description>This field store the date when batch update the building on geography.</description>
        <label>Building Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>administrative_area_level_3 or locality should be saved here in City field.</description>
        <label>City</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipName>Google_Places</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of the Google Location</description>
        <label>Country</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>This will be the administrative_area_level_2 value which generally represents County or District</description>
        <label>County/District</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Address__c</fullName>
        <description>Formatted Address of the Location which will also be stored in Name field.</description>
        <label>Formatted Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <description>Geo Location of the location in terms of Latitude and Longitude should be stored here.</description>
        <label>Geocode</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <description>Entire JSON retrieved from Google Maps should be saved here, so we can pull any additional information easily in future from Google if required.</description>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>Location Type provided in the Google Location should be stored here.</description>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APPROXIMATE</fullName>
                </value>
                <value>
                    <fullName>GEOMETRIC_CENTER</fullName>
                </value>
                <value>
                    <fullName>RANGE_INTERPOLATED</fullName>
                </value>
                <value>
                    <fullName>ROOFTOP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nearest_Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the value of nearest building which is included in buildings object.</description>
        <inlineHelpText>The value in this field comes from buildings available for the user.</inlineHelpText>
        <label>Nearest Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Geographies</relationshipLabel>
        <relationshipName>Geographies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Place_ID__c</fullName>
        <description>Google ID of the location. Google API calls is Place ID</description>
        <externalId>true</externalId>
        <label>Place ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Previous_Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Geographies (Previous Building)</relationshipLabel>
        <relationshipName>previousGeographies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Google Places returns administrative_area_level_1 which is generally a State or Province which will be stored here.</description>
        <label>State/Provience</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sublocality__c</fullName>
        <description>Sub-locality of the place should be stored here.</description>
        <label>Sublocality</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip or Postal code of the Location should be stored here.</description>
        <label>Zip/Postal Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <description>This object will represent Google Maps Location so that we can reuse same location as and when required within multiple objects.</description>
    <label>Geography</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Geography_and_Nearest_Building</fullName>
        <columns>NAME</columns>
        <columns>Nearest_Building__c</columns>
        <filterScope>Everything</filterScope>
        <label>Geography and Nearest Building</label>
    </listViews>
</CustomObject>